--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
 <!--电子书 阅读器-->
-<script src="./static/ebooks/lib/epub.min.js"></script>
+<script src="static/lib/epub.min.js"></script>
 
 <!--M站 必须 微信js sdk -->
 <!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>-->
